--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    networks:
+      - spring
   eureka-server:
     image: alexandrubaltazar/eureka-server:latest
     container_name: eureka-server
@@ -48,7 +50,6 @@ services:
       - "8761:8761"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - _JAVA_OPTIONS="-XX:ParallelGCThreads=2"
     networks:
       - spring
     depends_on:
@@ -65,6 +66,54 @@ services:
     depends_on:
       - zipkin
       - eureka-server
+  customer:
+    image: alexandrubaltazar/customer:latest
+    container_name: customer
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - eureka-server
+      - apigw
+      - postgres
+      - rabbitmq
+  fraud:
+    image: alexandrubaltazar/fraud:latest
+    container_name: fraud
+    ports:
+      - "8081:8081"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - eureka-server
+      - apigw
+      - postgres
+      - rabbitmq
+  notification:
+    image: alexandrubaltazar/notification:latest
+    container_name: notification
+    ports:
+      - "8082:8082"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - eureka-server
+      - apigw
+      - postgres
+      - rabbitmq
 networks:
   postgres:
     driver: bridge
