--- a/customer/src/main/resources/application-docker.yml
+++ b/customer/src/main/resources/application-docker.yml
@@ -23,3 +23,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+    enabled: false
