--- a/notification/src/main/resources/application-docker.yml
+++ b/notification/src/main/resources/application-docker.yml
@@ -23,6 +23,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka
+    enabled: false
 rabbitmq:
   exchanges:
     internal: internal.exchange
